# stremio-source-resolver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: resolve_movie.py  torrentio.py
src/stremio_source_resolver/: __init__.py  models.py  parsing.py  resolver.py  safety.py
tests/: test_parsing.py
